# rweb

./: .env.example  Cargo.toml
src/: main.rs
src/html/: index.html
