[package]
name = "web"
version = "0.1.0"
authors = ["jarra <suhrawardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.1", features = ["tcp", "server", "http1"] }
pretty_env_logger = "0.4.0"
tokio = { version = "1.0.1", features = ["full"] }
