[package]
name = "web"
version = "0.1.0"
authors = ["jarra <suhrawardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.8"
futures-util = "0.3.8"
hyper = { version = "0.14.1", features = ["client", "http1", "server", "stream", "tcp"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde_json = "1.0.60"
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
